--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
     <head>
         <title> GMUGO</title>
-
-        <!--links the css stylesheet with our html page:) -->
-        <link rel="stylesheet" type="text/css" media="screen" href="css files/index.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css files/contact.css">
     </head>
 
     <body>
@@ -27,31 +26,24 @@
         </div>
 
         <!--Stuff to find events-->
-        <div class="find-events">
-            <p> Find Events Near You</p>
-            <div class="filter-search">
-                <div class="eat-drink">
-                    
-                    <!--select a location-->
-                    <select name="location">
-                        <option value="select">Select A Location</option>
-                        <option value="Alexandria">Alexandria</option>
-                        <option value="Alexandria">D.C Metro Area</option>
-                        <option value="Alexandria">Arlington</option>
-                        <option value="Alexandria">Fairfax</option>
-                        <option value="Alexandria">Fredericksburg</option>
-                        <option value="Alexandria">GMU</option>
-                    </select>
-
-                    <!--select a date-->
-                    <input type="date" id="date">
-
-                    <!--A search button-->
-                    <button>Search</button>
-                </div>
-            </div>
+        <div class="intro">
+            <h1> We are GMUGO</h1>
+            <p>We plan your events for you!</p>
         </div>
 
+        <div class="about-us">
+            <h3>About Us</h3>
+            <p>This app was created by a team consisting of seven people.</p>
+            <p>We're students at GMU, and knowing the struggle of trying to find things to do in the area, we built this app to help others like us.</p>
+        </div>
+
+
+        <div class="offer">
+            <h3>What We Offer</h3>
+            <p>We offer tools to help you find events discounts from areas around Mason!</p>
+            <p>With our app, you will find discounts in restaurants and fun activities to do!</p>
+            <p>You can also use our app to plan your upcoming itenrary!</p>
+        </div>
         <!--Bottom footer of page with links-->
         <footer>
             <div class="footer-stuff">
