--- a/frontend/eatdrink.html
+++ b/frontend/eatdrink.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
     <head>
         <title> GMUGO</title>
-
-        <!--links the css stylesheet with our html page:) -->
-        <link rel="stylesheet" type="text/css" media="screen" href="css files/index.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css files/eatdrink.css">
     </head>
 
     <body>
@@ -26,31 +25,23 @@
             </ul>
         </div>
 
-        <!--Stuff to find events-->
-        <div class="find-events">
-            <p> Find Events Near You</p>
-            <div class="filter-search">
-                <div class="eat-drink">
-                    
-                    <!--select a location-->
-                    <select name="location">
-                        <option value="select">Select A Location</option>
-                        <option value="Alexandria">Alexandria</option>
-                        <option value="Alexandria">D.C Metro Area</option>
-                        <option value="Alexandria">Arlington</option>
-                        <option value="Alexandria">Fairfax</option>
-                        <option value="Alexandria">Fredericksburg</option>
-                        <option value="Alexandria">GMU</option>
-                    </select>
+        <!--Stuff to find food discounts-->
+        <div class="eat-drink">
+            <p> Eat & Drink</p>
 
-                    <!--select a date-->
-                    <input type="date" id="date">
-
-                    <!--A search button-->
-                    <button>Search</button>
-                </div>
-            </div>
+            <select name="location">
+                <option value="select">Select A Location</option>
+                <option value="Alexandria">Alexandria</option>
+                <option value="Alexandria">D.C Metro Area</option>
+                <option value="Alexandria">Arlington</option>
+                <option value="Alexandria">Fairfax</option>
+                <option value="Alexandria">Fredericksburg</option>
+                <option value="Alexandria">GMU</option>
+            </select>
         </div>
+
+
+
 
         <!--Bottom footer of page with links-->
         <footer>
