Nearly done implementing persistent data.

--- a/frontend/public/pages/userinfo.html
+++ b/frontend/public/pages/userinfo.html
@@ -32,7 +32,7 @@
             <form>
                 <label for="age">Age:</label><br>
                 <input type="number" id="age" name="age" min="13" max="105" required><br>
-                <p>Please Select Your Gender</p><br>
+                <p>Please Select Your Gender:</p><br>
                 <input type="radio" id="genderMale" name="gender" value="male">
                 <label for="genderMale">Male</label><br>
                 <input type="radio" id="genderFemale" name="gender" value="female">
@@ -45,9 +45,9 @@
         </div>
         <div class="interestsDiv">
             <h2>Interests:</h1>
-            <ul id="interestsList">
+            <ol id="interestsList">
                 <li id="placeholder">None yet...</li>
-            </ul>
+            </ol>
         </div>
     </div>
 
