finished data permanence and userinfo reset

--- a/frontend/public/pages/userinfo.html
+++ b/frontend/public/pages/userinfo.html
@@ -41,12 +41,12 @@
                 <input type="text" id="interest" name="interest">
                 <input id="addInterestButton" type="button" value="Add Interest" id="Add Interest" name="Add Interest" disabled><br>
                 <input id="userInfoSubmit" type="submit" disabled>
+                <input id="resetUserInfo" type="button" value="Reset" disabled>
             </form>
         </div>
         <div class="interestsDiv">
             <h2>Interests:</h1>
             <ol id="interestsList">
-                <li id="placeholder">None yet...</li>
             </ol>
         </div>
     </div>
