--- a/frontend/public/pages/index.html
+++ b/frontend/public/pages/index.html
@@ -49,7 +49,7 @@
                 <input type="date" id="date">
 
                 <!--A search button-->
-                <button>Search</button>
+                <button id="eventSearch">Search</button>
             </div>
         </div>
     </div>
