--- a/frontend/public/pages/contact.html
+++ b/frontend/public/pages/contact.html
@@ -17,11 +17,8 @@
     <div class="nav-bar">
         <ul>
             <!--Tabs (and their links!)-->
-            <li><a href="index.html">Home</a></li>
-            <li><a href="transportation.html">Transportation</a></li>
-            <li><a href="eatdrink.html">Eat & Drink</a></li>
-            <li><a href="discounts.html">Student Discounts</a></li>
-            <li class="selected"><a href="contact.html">Contact Us</a></li>
+            <li><a href="index.html">My Itinerary</a></li>
+            <li class="selected"><a href="contact.html">Quickstart</a></li>
             <li id="interestLink"><a href="userinfo.html">My Interests</a></li>
         </ul>
     </div>
@@ -35,22 +32,23 @@
     <div class="about-us">
         <h3>About Us</h3>
         <p>This app was created by a team consisting of seven people.</p>
-        <p>We're students at GMU, and knowing the struggle of trying to find things to do in the area, we built this app
+        <p>We're students at GMU and, knowing the struggle of trying to find things to do in the area, we built this app
             to help others like us.</p>
     </div>
 
 
     <div class="offer">
         <h3>What We Offer</h3>
-        <p>We offer tools to help you find events discounts from areas around Mason!</p>
-        <p>With our app, you will find discounts in restaurants and fun activities to do!</p>
-        <p>You can also use our app to plan your upcoming itenrary!</p>
+        <p>We offer tools to help you find events, attractions, and more around the Northern Virginia area!</p>
+        <p>With this web application, you will be find yourself with plenty to do!</p>
+        <p>To get started, navigate to the "My Interests" section, enter some details about yourself, and then navigate
+            back to the "Itinerary" tab to see the magic of our service!</p>
     </div>
     <!--Bottom footer of page with links-->
     <footer>
         <div class="footer-stuff">
             <div class="category">
-                <h3>Location</h3>
+                <h3>Locations</h3>
                 <ul>
                     <ul>Alexandria</ul>
                     <ul>D.C Metro Area</ul>
@@ -60,20 +58,9 @@
                     <ul>GMU</ul>
                 </ul>
             </div>
-
-            <div class="category">
-                <h3>Transportation</h3>
-                <ul>
-                    <ul>GMU Shuttles</ul>
-                    <ul>Metrobus</ul>
-                    <ul>Metrorail</ul>
-                </ul>
-            </div>
         </div>
     </footer>
 
 </body>
-
-<script type="module" src="../scripts/gmugo.js"></script>
 
 </html>
