--- a/frontend/public/pages/index.html
+++ b/frontend/public/pages/index.html
@@ -19,37 +19,24 @@
     <div class="nav-bar">
         <ul>
             <!--Tabs (and their links!)-->
-            <li class="selected"><a href="index.html">Home</a></li>
-            <li><a href="transportation.html">Transportation</a></li>
-            <li><a href="eatdrink.html">Eat & Drink</a></li>
-            <li><a href="discounts.html">Student Discounts</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li id="interestLink"><a href="userinfo.html">My Interests</a></li>
+            <li class="selected"><a href="index.html">My Itinerary</a></li>
+            <li><a href="contact.html">Quickstart</a></li>
+            <li id="interestLink"><a href="userinfo.html">My Info</a></li>
         </ul>
     </div>
 
     <!--Stuff to find events-->
     <div class="find-events">
-        <p> Find Events Near You</p>
+        <p>Your Itinerary</p>
         <div class="filter-search">
+            <div id="loading">
+                <fluent-progress-ring></fluent-progress-ring>
+                <p>Loading</p>
+            </div>
             <div class="eat-drink">
+                <ol id="userItinerary">
 
-                <!--select a location-->
-                <select name="location">
-                    <option value="select">Select A Location</option>
-                    <option value="Alexandria">Alexandria</option>
-                    <option value="Alexandria">D.C Metro Area</option>
-                    <option value="Alexandria">Arlington</option>
-                    <option value="Alexandria">Fairfax</option>
-                    <option value="Alexandria">Fredericksburg</option>
-                    <option value="Alexandria">GMU</option>
-                </select>
-
-                <!--select a date-->
-                <input type="date" id="date">
-
-                <!--A search button-->
-                <button id="eventSearch">Search</button>
+                </ol>
             </div>
         </div>
     </div>
@@ -58,7 +45,7 @@
     <footer>
         <div class="footer-stuff">
             <div class="category">
-                <h3>Location</h3>
+                <h3>Locations</h3>
                 <ul>
                     <ul>Alexandria</ul>
                     <ul>D.C Metro Area</ul>
@@ -68,20 +55,12 @@
                     <ul>GMU</ul>
                 </ul>
             </div>
-
-            <div class="category">
-                <h3>Transportation</h3>
-                <ul>
-                    <ul>GMU Shuttles</ul>
-                    <ul>Metrobus</ul>
-                    <ul>Metrorail</ul>
-                </ul>
-            </div>
         </div>
     </footer>
 
 </body>
 
-<script type="module" src="../scripts/gmugo.js"></script>
+<script type="module" src="../scripts/index.js"></script>
+<script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
 
 </html>
